--- a/html/merch.html
+++ b/html/merch.html
@@ -10,14 +10,14 @@
 <body>
    <div>
     <header>
-        <div class="linkinbutt">
-            <a class="logo" href="#index.html" img src="bandiveebileht/html/image 3.png"> </a>
+        <div class="linkinbutton">
+            <a class="logo" href="index.html"><img src="image3.png" alt="logo"></a>
         </div>
-        <nav class="headbutt">
-            <a href="#index.html">HOME</a>
-            <a href="#music.html">MUSIC</a>
-            <a href="#tour.html">TOUR</a>
-            <a href="#merch.html">MERCH</a>
+        <nav class="headbutton">
+            <a class="homebutton" href="#index.html">HOME</a>
+            <a class="musicbutton" href="#music.html">MUSIC</a>
+            <a class="tourbutton" href="#tour.html">TOUR</a>
+            <a class="merchbutton" href="#merch.html">MERCH</a>
         </nav>
     </header>
    </div>
