--- a/html/merch.html
+++ b/html/merch.html
@@ -14,12 +14,19 @@
             <a class="logo" href="index.html"><img src="image3.png" alt="logo"></a>
         </div>
         <nav class="headbutton">
-            <a class="homebutton" href="#index.html">HOME</a>
-            <a class="musicbutton" href="#music.html">MUSIC</a>
-            <a class="tourbutton" href="#tour.html">TOUR</a>
-            <a class="merchbutton" href="#merch.html">MERCH</a>
+            <a class="homebutton" href="index.html">HOME</a>
+            <a class="musicbutton" href="music.html">MUSIC</a>
+            <a class="tourbutton" href="tour.html">TOUR</a>
+            <a class="merchbutton" href="merch.html">MERCH</a>
         </nav>
     </header>
    </div>
+    <div class="collections">
+        <p>COLLECTIONS
+            <br>
+            FLASH SALE 50% OFF TIL DECEMBER!
+        </p>
+        <p>MEN</p>
+    </div>
 </body>
 </html>
