--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
 </head>
 <body>
+    <div>
+        <header>
+                <img src="image3.png" alt="logo">
+                <a class="homebutton" href="index.html">HOME</a>
+                <a class="musicbutton" href="music.html">MUSIC</a>
+                <a class="tourbutton" href="tour.html">TOUR</a>
+                <a class="merchbutton" href="merch.html">MERCH</a>
+        </header>
+       </div>
+        <div class="collections">
+            <p>COLLECTIONS
+                <br>
+                FLASH SALE 50% OFF TIL DECEMBER!
+            </p>
+            <p>MEN</p>
+        </div>
 </body>
 </html>
