--- a/html/merch.html
+++ b/html/merch.html
@@ -10,15 +10,11 @@
 <body>
    <div>
     <header>
-        <div class="linkinbutton">
-            <a class="logo" href="index.html"><img src="image3.png" alt="logo"></a>
-        </div>
-        <nav class="headbutton">
-            <a class="homebutton" href="index.html">HOME</a>
-            <a class="musicbutton" href="music.html">MUSIC</a>
-            <a class="tourbutton" href="tour.html">TOUR</a>
-            <a class="merchbutton" href="merch.html">MERCH</a>
-        </nav>
+        <img src="image3.png" alt="logo">
+        <a class="homebutton" href="index.html">HOME</a>
+        <a class="musicbutton" href="music.html">MUSIC</a>
+        <a class="tourbutton" href="tour.html">TOUR</a>
+        <a class="merchbutton" href="merch.html">MERCH</a>
     </header>
    </div>
     <div class="collections">
