--- a/html/music.html
+++ b/html/music.html
@@ -5,8 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Music</title>
     <link rel="stylesheet" href="music.css">
+    <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
 </head>
 <body>
+    <header>
+        <img src="image3.png" alt="logo">
+        <a class="homebutton" href="index.html">HOME</a>
+        <a class="musicbutton" href="music.html">MUSIC</a>
+        <a class="tourbutton" href="tour.html">TOUR</a>
+        <a class="merchbutton" href="merch.html">MERCH</a>
+    </header>
     <div class="container">
         <h1>Music</h1>
         <h3>Albums</h3>
