--- a/html/index.html
+++ b/html/index.html
@@ -2,10 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=7, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home</title>
+    <link rel="stylesheet" href="style.css">
+    <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
 </head>
 <body>
-    <a href="music.html">music</a>
+    <div class="content">
+        <!-- Image placed at the top -->
+        <img src="https://upload.wikimedia.org/wikipedia/commons/2/2f/Lead_Press_Photo_-_James_Minchin_III.jpg" alt="Linkin Park" class="image">
+
+        <!-- About Linkin Park Section -->
+        <div class="text-section">
+            <h3>About Linkin Park</h3>
+            <p>Linkin Park is a pioneering rock band that transformed the music landscape with their unique fusion of rock, metal, and electronic sounds. Emerging in 2000, the band quickly gained worldwide recognition with their groundbreaking debut album, "Hybrid Theory." The album's success marked the beginning of their long-lasting impact on the music industry, becoming one of the best-selling albums of the 21st century.</p>
+            <p>Linkin Park's influence extends beyond music, as they have become advocates for causes like mental health awareness, social justice, and environmental sustainability. Their authenticity and willingness to address personal struggles in their music have made them one of the most beloved bands of their generation.</p>
+        </div>
+
+        <!-- Chester Bennington Section -->
+        <div class="text-section">
+            <h3>Chester Bennington and His Legacy</h3>
+            <p>Chester Bennington, the legendary frontman of Linkin Park, was known for his incredible vocal range and emotional depth. His voice, capable of soaring melodies and intense screams, became the defining sound of the band. His raw honesty and willingness to share his struggles with mental health, addiction, and personal demons made him a relatable figure for millions of fans around the world.</p>
+            <p>Chester’s journey was not only marked by his music but also by his dedication to breaking the stigma surrounding mental health issues. His openness about his battles inspired others to seek help and share their own stories. Chester was also involved in various charitable initiatives, using his platform to bring awareness to causes he deeply cared about, including mental health advocacy, homelessness, and the fight against addiction.</p>
+            <p class="quote">"The hardest part is believing in yourself when the world around you says you can't." – Chester Bennington</p>
+        </div>
+    </div>
 </body>
 </html>
