--- a/html/merch.html
+++ b/html/merch.html
@@ -21,13 +21,36 @@
         <p>COLLECTIONS</p>
         <p>FLASH SALE 50% OFF TIL DECEMBER!</p>
     </div>
-    <div class="merchsection1">
+    <div class="merchsection1header">
         <p  class="men">MEN</p>
-    <div>
-        <p>
+    </div>
+    <div class="merchbox1">
+    <div class="merchsection1">
+     <div>
+        <img src="https://store.linkinpark.com/cdn/shop/files/LIP469F_FROMZEROTEXTUREBLACKTEE_F.png?v=1727108311&width=360" alt="shirt1">
+        <div class="merchboxtext">
+            <p>
+                FROM ZERO TEXTURE BLACK TEE
+            </p>
+            <p>
+                $35.00 USD
+            </p>
+        </div>
+     </div>
+     <div>
+        <img src="https://store.linkinpark.com/cdn/shop/files/LIP469F_FROMZEROTEXTUREBLACKTEE_F.png?v=1727108311&width=360" alt="shirt1">
+            <div class="merchboxtext">
+                <p>
+                    FROM ZERO TEXTURE BLACK TEE
+                </p>
+                <p>
+                    $35.00 USD
+                </p>
+            </div>
+     </div>
+     
+    </div>
+    </div>
 
-        </p>
-    </div>
-    </div>
 </body>
 </html>
