--- a/html/tour.html
+++ b/html/tour.html
@@ -6,17 +6,128 @@
     <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
  </head>
  <body>
-    <div >
-      <div>08 NOV <br>
-        fri <br>
+
+     <div class="flex-container">
+      <div><b>08 NOV 2024 </b><br>
+        Friday <br>
         18.00 <br>
-        This week <br>
+        <b>This week</b> <br>
+      </div>
+
+      <div class="vertical">
+        Globe Life Field, <b>Arlington, TX,USA </b><img src="images/united-states.png" alt="USA" class="usa"> <br>
+        <div class="number">
+            <img src="images/attention.png" alt="exclamation mark" class="mark">30 ticet remaining!
+        </div>
+      </div>
+        <div class="buybutton">
+            <button>Buy</button>
+        </div> 
+    </div>
+
+    <div>
+        <div class="flex-container">
+         <div><b>11 NOV 2024</b><br>
+           Monday <br>
+           18.00 <br>
+           <b>Next week</b> <br>
+         </div>
+         <div class="vertical">
+           Coliseo Medplus, <b>Bogota,Colombia </b><img src="images/colombia.png" alt="colombia" class="usa"> <br>
+           <div class="number">
+               <img src="images/attention.png" alt="exclamation mark" class="mark">80 ticet remaining!
+           </div>
+         </div>
+           <div class="buybutton">
+               <button>Buy</button>
+           </div> 
+       </div>
+    <div>
+        <div class="flex-container">
+         <div><b>15 NOV 2024</b><br>
+           Friday <br>
+           18.00 <br>
+           <b>Next week</b> <br>
+         </div>
+         <div class="vertical">
+           Allianz Parque, <b>São Paulo,Brazil </b><img src="images/flag.png" alt="Brazil" class="usa"> <br>
+           <div class="fire">
+               <img src="images/fire.png" alt="fire mark" class="mark">Tickets are going fast!
+           </div>
+         </div>
+           <div class="buybutton">
+               <button>Buy</button>
+           </div> 
+       </div>
+    <div>
+        <div class="flex-container">
+         <div><b>16 NOV 2024 </b><br>
+           Saturday <br>
+           19.00 <br>
+           <b>Next week</b> <br>
+         </div>
+         <div class="vertical">
+            Allianz Parque, <b>São Paulo,Brazil </b><img src="images/flag.png" alt="Brazil" class="usa"> <br>
+           <div class="fire">
+               <img src="images/fire.png" alt="dollar" class="mark">Tickets are going fast!
+           </div>
+         </div>
+           <div class="buybutton">
+               <button>Buy</button>
+           </div> 
+       </div>
+    <div>
+        <div class="flex-container">
+         <div><b>12 APR 2025 </b><br>
+           Saturday<br>
+           18.00 <br>
+           <b>Next year</b> <br>
+         </div>
+         <div class="vertical">
+           Sick New World, <b>Las Vegas,NV,USA </b><img src="images/united-states.png" alt="USA" class="usa"> <br>
+           <div class="dollar">
+               <img src="images/dollar-symbol.png" alt="dollar" class="mark">Cheap tickets available! 
+           </div>
+         </div>
+           <div class="buybutton">
+               <button>Buy</button>
+           </div> 
+       </div>
+    </div>
+    <div>
+     <div class="flex-container">
+      <div><b>10 MAY 2025 </b><br>
+        Saturday<br>
+        18.00 <br>
+        <b>Next year</b> <br>
       </div>
       <div class="vertical">
-        Globe Life Field, Arlington, TX,USA <br>
-        130 ticet reminding
+        Sonic Temple, <b>Columbus,OH,USA </b><img src="images/united-states.png" alt="USA" class="usa"> <br>
+        <div class="dollar">
+            <img src="images/dollar-symbol.png" alt="dollar" class="mark">Cheap tickets available!
+        </div>
       </div>
-      <button>Buy</button>
+        <div class="buybutton">
+            <button>Buy</button>
+        </div> 
     </div>
+
+    <div class="content">
+     <div class="second">
+      <div>
+        <img src="images/LinkinParkBerlin2010.jpg" alt="Linkin Park" class="park">
+        <h1><b>Linkin Park</b></h1>
+        <p>Hybrid Theory isn’t just the title of Linkin Park’s chart-topping debut album, but a career mission statement.
+         From day one, the same six players (lead vocalist Chester Bennington, drummer/percussionist Rob Bourdon, 
+         guitarist Brad Delson, bassist Dave ‘Phoenix’ Far... <br><b>See more</b></p>
+      </div>
+      <div class="thrid">
+        <img src="images/Linkin_Park_-_From_Zero.png" alt="FromZero" class="zero">
+        <p class="head">The Empties Machine <br></p>
+        <p>Linkin Park</p>
+        <img src="images/play.png" alt="playbutton" class="playbutton">
+      </div>
+     </div>
+</div>
  </body>
 </html>
