--- a/html/tour.html
+++ b/html/tour.html
@@ -6,7 +6,7 @@
     <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
  </head>
  <body>
-
+ <div class="all">
      <div class="flex-container">
       <div><b>08 NOV 2024 </b><br>
         Friday <br>
@@ -127,6 +127,6 @@
         <img src="images/play.png" alt="playbutton" class="playbutton">
       </div>
      </div>
-
+</div>
  </body>
 </html>
