--- a/html/merch.html
+++ b/html/merch.html
@@ -24,9 +24,8 @@
     <div class="merchsection1header">
         <p  class="men">MEN</p>
     </div>
-    <div class="merchbox1">
     <div class="merchsection1">
-     <div>
+     <div class="merchbox1">
         <img src="https://store.linkinpark.com/cdn/shop/files/LIP469F_FROMZEROTEXTUREBLACKTEE_F.png?v=1727108311&width=360" alt="shirt1">
         <div class="merchboxtext">
             <p>
@@ -37,11 +36,61 @@
             </p>
         </div>
      </div>
-     <div>
-        <img src="https://store.linkinpark.com/cdn/shop/files/LIP469F_FROMZEROTEXTUREBLACKTEE_F.png?v=1727108311&width=360" alt="shirt1">
+     <div class="merchbox1">
+        <img src="https://store.linkinpark.com/cdn/shop/files/LIP519C_OFFICIALFROMZERO2024BLACKTOURTEESM-LG_FRONT.png?v=1727113636&width=360" alt="shirt2">
             <div class="merchboxtext">
                 <p>
-                    FROM ZERO TEXTURE BLACK TEE
+                    FROM ZERO BLACK TOUR TEE
+                </p>
+                <p>
+                    $45.00 USD
+                </p>
+            </div>
+     </div>
+     <div class="merchbox1">
+        <img src="https://store.linkinpark.com/cdn/shop/files/LIP471A_FROMZEROPHOTOCOLLAGEBLACKTEESM-LG_F.png?v=1725480924&width=360" alt="shirt3">
+            <div class="merchboxtext">
+                <p>
+                    FROM ZERO PHOTO COLLAGE TEE
+                </p>
+                <p>
+                    $45.00 USD
+                </p>
+            </div>
+     </div>
+     
+    </div>
+    <div class="merchsection1header">
+        <p  class="men">WOMEN</p>
+    </div>
+    <div class="merchsection1">
+     <div class="merchbox1">
+        <img src="https://store.linkinpark.com/cdn/shop/products/LPULadiesblack.png?v=1603350723&width=360" alt="shirt4">
+        <div class="merchboxtext">
+            <p>
+                LPU LADIES TEE
+            </p>
+            <p>
+                $15.00 USD
+            </p>
+        </div>
+     </div>
+     <div class="merchbox1">
+        <img src="https://store.linkinpark.com/cdn/shop/products/LIP362A_STENCILOVERSIZEDWASHEDCROPTEE.png?v=1679351809&width=360" alt="shirt5">
+            <div class="merchboxtext">
+                <p>
+                    STENCIL OVERSIZED CROP TEE
+                </p>
+                <p>
+                    $40.00 USD
+                </p>
+            </div>
+     </div>
+     <div class="merchbox1">
+        <img src="https://store.linkinpark.com/cdn/shop/files/LPU067A_LPUICONSLADIESBLACKTEE1.png?v=1725481175&width=360" alt="shirt6">
+            <div class="merchboxtext">
+                <p>
+                    LPU ICONS LADIES BLACK TEE
                 </p>
                 <p>
                     $35.00 USD
@@ -52,5 +101,11 @@
     </div>
     </div>
 
+        <footer>
+            <div class="footertext">
+                <p>© 2024 LINKINPARK. ALL RIGHTS RESERVED</p>
+                <p>CONTACT US AT mardo.mai@ametikool.ee</p>
+            </div>
+        </footer>
 </body>
 </html>
