--- a/html/index.html
+++ b/html/index.html
@@ -37,5 +37,11 @@
         <img src="https://media.cnn.com/api/v1/images/stellar/prod/170720173626-chester-bennington-linkin-park-2015-file.jpg?q=w_3000,h_2168,x_0,y_0,c_fill" alt="Chester Bennington" class="image-blurry-border">
     </div>
   
+    <footer>
+        <div class="footertext">
+            <p>© 2024 LINKINPARK. ALL RIGHTS RESERVED      +372 5851 0852</p>
+            <p>CONTACT US AT mardo.mai@ametikool.ee</p>
+        </div>
+    </footer>
 </body>
 </html>
