--- a/html/music.html
+++ b/html/music.html
@@ -176,5 +176,11 @@
         </div>
     </div>
 </div>
+<footer>
+    <div class="footertext">
+        <p>© 2024 LINKINPARK. ALL RIGHTS RESERVED      +372 5851 0852</p>
+        <p>CONTACT US AT mardo.mai@ametikool.ee</p>
+    </div>
+</footer>
 </body>
 </html>
