--- a/html/music.html
+++ b/html/music.html
@@ -179,7 +179,7 @@
 <div class="hits">
 <h2>BEST HITS</h2>
  <br> <br>
- <div>
+ <div class="text">
     <p><br> <br>
      1.In the End <br>
      2.Numb <br>
