--- a/html/music.html
+++ b/html/music.html
@@ -180,23 +180,23 @@
 <h2>BEST HITS</h2>
  <br> <br>
  <div class="text">
-    <p><br> <br>
-     1.In the End <br>
-     2.Numb <br>
-    3.What I’ve Done <br>
-    4.Faint <br>
-    5.One step Closer <br>
-    6.Bleed It Out <br>
-    7.Crawling <br>
-    8.Somewhere I Belong <br>
-    9.Papercut <br>
-    10.Burn it down <br>
-    11.Breaking the Habit <br>
-    12.Castle of glass <br>
-    13.One More Light <br>
-    14.New Divide <br>
-    15.Heavy (feat. Kiiara) <br>
- </p>   <br> 
+    <p>1.In the End</p>
+    <p>2.Numb</p>
+    <p>3.What I’ve Done</p>
+    <p></p>4.Faint</p>
+    <p></p>5.One step Closer</p>
+    <p></p>6.Bleed It Out</p>
+    <p></p>7.Crawling</p>
+    <p></p>8.Somewhere I Belong</p>
+    <p></p>9.Papercut</p>
+    <p></p>10.Burn it down</p>
+    <p></p>11.Breaking the Habit</p>
+    <p></p>12.Castle of glass</p>
+    <p></p>13.One More Light</p>
+    <p></p>14.New Divide</p>
+    <p>15.Heavy (feat. Kiiara)</p>  
+</div>
+ <div class="text">
  <p>
   Streams Daily <br> <br>
   1,982,473 <br>
