--- a/html/tour.html
+++ b/html/tour.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Linkin Park tour</title>
- <link rel="stylesheet" href="tour.css">
+    <link rel="stylesheet" href="tour.css">
     <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
  </head>
  <body>
@@ -14,6 +16,22 @@
         <a class="tourbutton" href="tour.html">TOUR</a>
         <a class="merchbutton" href="merch.html">MERCH</a>
     </header>
+    <input type="checkbox" id="menu-toggle">
+    <label for="menu-toggle" class="burger">
+        <span></span>
+        <span></span>
+        <span></span>
+    </label>
+    
+    <nav class="menu">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="music.html">Music</a></li>
+            <li><a href="tour.html">Tour</a></li>
+            <li><a href="merch.html">Merch</a></li>
+        </ul>
+    
+    </nav>
    </div>
   <div class="all">
 
