parandused music,tour

--- a/html/music.html
+++ b/html/music.html
@@ -179,44 +179,44 @@
 <div class="hits">
 <h2>BEST HITS</h2>
  <br> <br>
- <div class="text">
+ <div class="songlist">
+  <div class="text">
+    <p><b>Songs</b></p>
     <p>1.In the End</p>
     <p>2.Numb</p>
     <p>3.What I’ve Done</p>
-    <p></p>4.Faint</p>
-    <p></p>5.One step Closer</p>
-    <p></p>6.Bleed It Out</p>
-    <p></p>7.Crawling</p>
-    <p></p>8.Somewhere I Belong</p>
-    <p></p>9.Papercut</p>
-    <p></p>10.Burn it down</p>
-    <p></p>11.Breaking the Habit</p>
-    <p></p>12.Castle of glass</p>
-    <p></p>13.One More Light</p>
-    <p></p>14.New Divide</p>
+    <p>4.Faint</p>
+    <p>5.One step Closer</p>
+    <p>6.Bleed It Out</p>
+    <p>7.Crawling</p>
+    <p>8.Somewhere I Belong</p>
+    <p>9.Papercut</p>
+    <p>10.Burn it down</p>
+    <p>11.Breaking the Habit</p>
+    <p>12.Castle of glass</p>
+    <p>13.One More Light</p>
+    <p>14.New Divide</p>
     <p>15.Heavy (feat. Kiiara)</p>  
-</div>
- <div class="text">
- <p>
-  Streams Daily <br> <br>
-  1,982,473 <br>
-  1,947,399 <br>
-  672,005 <br>
-  1,437,569 <br>
-  740,929 <br>
-  618,036 <br>
-  521,363 <br>
-  572,217 <br>
-  652,750 <br>
-  358,388 <br>
-  380,106 <br>
-  276,281 <br>
-  254,770 <br>
-  241,945 <br>
-  100,993 <br> <br>
-  <p class="spoti">From spotify</p>
- </p>
-</div>
+  </div>
+  <div class="text2">
+  <p><b>Streams Daily</b>(Spotify)</p>
+  <p>1. 1,982,473</p> 
+  <p>2. 1,947,399</p> 
+  <p>3. 672,005</p> 
+  <p>4. 1,437,569</p> 
+  <p>5. 740,929 </p>
+  <p>6. 618,036</p> 
+  <p>7. 521,363</p> 
+  <p>8. 572,217</p> 
+  <p>9. 652,750</p> 
+  <p>10. 358,388 </p>
+  <p>11. 380,106</p> 
+  <p>12. 276,281</p> 
+  <p>13. 254,770 </p>
+  <p>14. 241,945</p> 
+  <p>15. 100,993 </p>
+  </div>
+ </div>
 </div>
 
 <footer>
